--- a/secret.py.template
+++ b/secret.py.template
@@ -1,4 +1,4 @@
 #paste your api_hash and api_id from my.telegram.org
-api_hash = "xxxxxxxxxxxxxxxxxxxxxxx"
-api_id = 123456
+api_hash = "6c66bf200144497d12e6ce0a2b2cec98"
+api_id = 2990733
 entity = "tgcloud"
